force-app/main/default/objects/zoom_app__Zoom_Event__c/zoom_app__Zoom_Event__c.object-meta.xml
<CustomObject>
    <description>This object is the extension to &quot;Event&quot;  object. It saves all zoom meeting info.</description>
    <label>Zoom Event</label>
    <nameField>
        <displayFormat>Zoom-Event-{0}</displayFormat>
        <label>Zoom Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>