force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__Google_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Google_Event_Id__c</fullName>
    <label>Google Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>