force-app/main/default/objects/zoom_app__Zoom_Event__c/listViews/zoom_app__All.listView-meta.xml
<ListView>
    <fullName>zoom_app__All</fullName>
    <columns>NAME</columns>
    <columns>zoom_app__Meeting_Topic__c</columns>
    <columns>zoom_app__Google_Event_Id__c</columns>
    <columns>zoom_app__IsZoomMeeting__c</columns>
    <columns>zoom_app__Zoom_Meeting_Id__c</columns>
    <columns>zoom_app__Join_Url__c</columns>
    <columns>zoom_app__Meeting_Type__c</columns>
    <columns>zoom_app__Participant_Count__c</columns>
    <columns>zoom_app__Participants__c</columns>
    <columns>zoom_app__UUID__c</columns>
    <columns>zoom_app__Zoom_Meeting_Creation_Status__c</columns>
    <columns>zoom_app__Zoom_Meeting_Start_Time__c</columns>
    <columns>zoom_app__Zoom_Meeting_End_Time__c</columns>
    <columns>zoom_app__Zoom_Meeting_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>